tests/paczka1/small_fuzzy/29877387.err
Error in line 5: A340 S924 49,1
Error in line 2: PGm7kDml39a A340 30,0
Error in line 11: x71U S924 33,5
Error in line 8: PGm7kDml39a A582 61,1
